[package]
name = "telegram_cmd_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = [
    "fs",
    "rt",
    "sync",
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3.17"
tracing = { version = "0.1.37" }
directories = "5.0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
teloxide = "0.12.2"
async-trait = "0.1.77"
